--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -22,15 +22,15 @@ body {
 .container {
   margin: 0 auto;
 
-  @include for-mobile-down {
+  @include mobile {
     padding: 0 2.5rem;
   }
 
-  @include for-tablet-down {
+  @include tablet {
     padding: 0 4rem;
   }
 
-  @include for-desktop-up {
+  @include desktop {
     padding: 0 4rem;
     max-width: 115rem;
   }
@@ -68,4 +68,20 @@ a {
 // Li
 li {
   list-style: none;
+}
+
+// Images
+.img {
+  width: 100%;
+  object-fit: cover;
+}
+
+// Display
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
 }
