--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ body {
   line-height: 2.8rem;
   font-weight: 400;
   color: #9698a6;
+  text-align: center;
+}
+
+@media (min-width: 901px) {
+  body {
+    overflow: visible !important;
+  }
 }
 
 .container {
@@ -39,6 +46,74 @@ body {
   .container {
     padding: 0 4rem;
     max-width: 115rem;
+  }
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  font-weight: 300;
+  color: #2d314d;
+}
+
+h1 {
+  font-size: 4rem;
+  line-height: 4.7rem;
+}
+
+@media (min-width: 901px) {
+  h1 {
+    font-size: 5.6rem;
+    line-height: 6.4rem;
+  }
+}
+
+h2 {
+  font-size: 3.2rem;
+  line-height: 3.8rem;
+}
+
+@media (min-width: 901px) {
+  h2 {
+    font-size: 4rem;
+    line-height: 6.4rem;
+  }
+}
+
+h3 {
+  font-size: 2rem;
+  line-height: 2.8rem;
+}
+
+@media (min-width: 901px) {
+  h3 {
+    font-size: 2.4rem;
+  }
+}
+
+h4 {
+  font-size: 1.6rem;
+  line-height: 2rem;
+}
+
+@media (min-width: 901px) {
+  h4 {
+    font-size: 2rem;
+    line-height: 1.6rem;
+  }
+}
+
+p {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+}
+
+@media (min-width: 901px) {
+  p {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
   }
 }
 
@@ -77,20 +152,40 @@ li {
      object-fit: cover;
 }
 
+.hide {
+  display: none;
+}
+
 .show {
   display: block;
 }
 
-.hide {
-  display: none;
+.no-scroll {
+  overflow: hidden;
 }
 
 .overlay {
   width: 100%;
   height: 100vh;
   top: 6.4rem;
-  background-color: aqua;
+  background: #2d314d;
+  background: -webkit-gradient(linear, left top, left bottom, from(#2d314d), to(#ffffff));
+  background: linear-gradient(180deg, #2d314d 0%, #ffffff 100%);
+  opacity: 0.9;
   position: absolute;
+  z-index: 10;
+}
+
+@media (min-width: 901px) {
+  .overlay {
+    display: none;
+  }
+}
+
+nav {
+  background-color: #ffffff;
+  position: relative;
+  z-index: 10;
 }
 
 .nav {
@@ -105,7 +200,8 @@ li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  display: relative;
+  position: relative;
+  z-index: 10;
 }
 
 @media (min-width: 901px) {
@@ -114,14 +210,53 @@ li {
   }
 }
 
-.nav__hamburger-open, .nav__hamburger-close {
+.nav__hamburger {
+  width: 2.5rem;
+  height: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   cursor: pointer;
 }
 
+.nav__hamburger span {
+  display: block;
+  width: 100%;
+  height: 0.2rem;
+  background-color: #2d314d;
+  -webkit-transform-origin: 0rem 0.13rem;
+          transform-origin: 0rem 0.13rem;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+
 @media (min-width: 901px) {
-  .nav__hamburger-open, .nav__hamburger-close {
+  .nav__hamburger {
     display: none;
   }
+}
+
+.nav .close > span:first-child {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.nav .close > span:nth-child(2) {
+  -webkit-transform: translateX(1rem);
+          transform: translateX(1rem);
+  opacity: 0;
+}
+
+.nav .close > span:last-child {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .nav__links {
@@ -132,6 +267,8 @@ li {
   border-radius: 0.5rem;
   text-align: center;
   padding: 3.5rem 0;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
 }
 
 @media (max-width: 900px) and (min-width: 481px) {
@@ -210,6 +347,91 @@ li {
 @media (min-width: 901px) {
   .nav__btn {
     display: block;
+  }
+}
+
+.hero {
+  border: magenta 1px solid;
+  background-color: #fafafa;
+  position: relative;
+  top: -12rem;
+}
+
+@media (min-width: 901px) {
+  .hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    top: 0;
+  }
+}
+
+.hero__img-container {
+  width: 100%;
+  background-image: url("../imgs/bg-intro-mobile.svg");
+  background-position: center 5rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 901px) {
+  .hero__img-container {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    -webkit-box-flex: 3;
+        -ms-flex: 3;
+            flex: 3;
+  }
+}
+
+.hero__img {
+  position: relative;
+  width: 90%;
+}
+
+.hero__text {
+  margin-top: 0;
+}
+
+@media (min-width: 901px) {
+  .hero__text {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: left;
+  }
+}
+
+.hero__header {
+  margin-bottom: 2.3rem;
+}
+
+.hero__body {
+  margin-bottom: 3.5rem;
+}
+
+.hero__btn {
+  margin-bottom: 8.8rem;
+}
+
+@media (min-width: 901px) {
+  .hero__btn {
+    margin-bottom: 0rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
