--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -16,6 +16,11 @@ body {
   line-height: 2.8rem;
   font-weight: 400;
   color: $Grayish-Blue;
+  text-align: center;
+
+  @include desktop {
+    overflow: visible !important;
+  }
 }
 
 // Container
@@ -33,6 +38,63 @@ body {
   @include desktop {
     padding: 0 4rem;
     max-width: 115rem;
+  }
+}
+
+// Text
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  font-weight: 300;
+  color: $Dark-Blue;
+}
+h1 {
+  font-size: 4rem;
+  line-height: 4.7rem;
+
+  @include desktop {
+    font-size: 5.6rem;
+    line-height: 6.4rem;
+  }
+}
+
+h2 {
+  font-size: 3.2rem;
+  line-height: 3.8rem;
+
+  @include desktop {
+    font-size: 4rem;
+    line-height: 6.4rem;
+  }
+}
+
+h3 {
+  font-size: 2rem;
+  line-height: 2.8rem;
+
+  @include desktop {
+    font-size: 2.4rem;
+  }
+}
+
+h4 {
+  font-size: 1.6rem;
+  line-height: 2rem;
+
+  @include desktop {
+    font-size: 2rem;
+    line-height: 1.6rem;
+  }
+}
+
+p {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  @include desktop {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
   }
 }
 
@@ -77,11 +139,15 @@ li {
 }
 
 // Display
+.hide {
+  display: none;
+}
 
 .show {
   display: block;
 }
 
-.hide {
-  display: none;
+// Stop scrolling
+.no-scroll {
+  overflow: hidden;
 }
