--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -2,8 +2,21 @@
   width: 100%;
   height: 100vh;
   top: 6.4rem;
-  background-color: aqua;
+  background: $Dark-Blue;
+  background: linear-gradient(180deg, $Dark-Blue 0%, $White 100%);
+  opacity: 0.9;
   position: absolute;
+  z-index: 10;
+
+  @include desktop {
+    display: none;
+  }
+}
+
+nav {
+  background-color: $White;
+  position: relative;
+  z-index: 10;
 }
 
 .nav {
@@ -12,18 +25,47 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  display: relative;
+  position: relative;
+  z-index: 10;
 
   @include desktop {
     height: 8rem;
   }
 
-  &__hamburger-open,
-  &__hamburger-close {
+  &__hamburger {
+    width: 2.5rem;
+    height: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     cursor: pointer;
+
+    span {
+      display: block;
+      width: 100%;
+      height: 0.2rem;
+      background-color: $Dark-Blue;
+      transform-origin: 0rem 0.13rem;
+      transition: all 300ms ease-out;
+    }
 
     @include desktop {
       display: none;
+    }
+  }
+
+  .close {
+    > span:first-child {
+      transform: rotate(45deg);
+    }
+
+    > span:nth-child(2) {
+      transform: translateX(1rem);
+      opacity: 0;
+    }
+
+    > span:last-child {
+      transform: rotate(-45deg);
     }
   }
 
@@ -35,6 +77,7 @@
     border-radius: 0.5rem;
     text-align: center;
     padding: 3.5rem 0;
+    transition: all 300ms ease-out;
 
     @include tablet {
       width: calc(100% - 8rem);
